--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         getText()
         
       }
+      // CODEANYWHERE.COM
       // need to get a search function thatll also display code
       function getText() {
         text1 = document.getElementById("text1").value;
