--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Where's the bass?</title>
     
   <body>
+    <div style="width:50px; height:50px; background-color:red"></div>
     <input type="text" id="text1" name="firstCountry">
     <p>
       vs
