--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       }
       .left {
         float: left;
+        background-color: red;
       }
       .w50 {
         width: 50%;
+        background-color: blue;
       }
       #container{
         position: absolute;
