--- a/index.html
+++ b/index.html
@@ -64,10 +64,20 @@
   </head>
   <body>
       <div class="left w50">
-      <input type="text" id="text1" name="firstCountry">      
+        <input type="text" id="text1" name="firstCountry">   
+        <p>
+          
+          Vix id copiosae inimicus, illud tincidunt sed ex, sint reque pro in. Erant pertinax in nam, mei ex placerat reformidans. Eu vide causae quo, eum ut facilis nusquam definitiones, vis saepe mediocritatem at. Omnesque maiestatis cotidieque vix cu, mel ex debet reformidans, at vis altera tibique. Ad illum consulatu quo, te per prima pertinax moderatius, quidam audiam in sea. Ex vel option tractatos philosophia.
+
+
+        </p>
       </div>
       <div class="left w50 bs">
-      <input type="text" id="text2" name="secondCountry">
+        <input type="text" id="text2" name="secondCountry">
+        <p>
+          Novum aliquam mnesarchum sit ut, everti accusamus splendide id has. Nostrud assueverit mel ad, mel ut iisque corpora gloriatur. In duo mollis persius. Sit eu velit impedit, duis epicuri ne sit.
+  Novum aliquam mnesarchum sit ut, everti accusamus splendide id has. Nostrud assueverit mel ad, mel ut iisque corpora gloriatur. In duo mollis persius. Sit eu velit impedit, duis epicuri ne sit.
+        </p>
       </div>
       
       <div id="container">
