--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
           return request.responseText;
       }
       var jsonVar = readJSON('country.json');
+      var obj = JSON.parse(jsonVar);
       console.log(jsonVar);
+      console.log(obj);
+      
     </script>
     <style>
       html {
